# RoadOfOgden

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp  config.hpp.in
.github/workflows/: check-multi-platform.yml  cmake-multi-platform-make-release.yml  cmake-multi-platform.yml  upload-build-artifacts.yml
Release/lib/cmake/SFML/: SFMLConfigVersion.cmake  SFMLStaticTargets.cmake
include/: ActivityManager.hpp  FightActivity.hpp  GameState.hpp  Sprites.hpp  Textures.hpp  draw.hpp
include/Activities/: Activity.hpp  FightActivity.hpp  MenuActivity.hpp
include/UIElements/: UIButton.hpp
project_build/lib/cmake/SFML/: SFMLStaticTargets.cmake
project_build/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
src/: Activity.cpp  GameState.cpp  Sprites.cpp  Textures.cpp  draw.cpp  main.cpp
src/Activities/: Activity.cpp  Activity.hpp  FightActivity.cpp  MenuActivity.cpp
src/Activities/CharacterActivity/: CharacterActivity.cpp  CharacterActivity.hpp  CharacterActivityUI.cpp  CharacterActivityUI.hpp  CharacterActivityUI_Inventory.cpp  CharacterActivityUI_Inventory.hpp
src/Activities/CharacterActivity/Character_Inventory/: CharacterActivityUI_Inventory.cpp  CharacterActivityUI_Inventory.hpp  Inventory_Item_List.cpp  Inventory_Item_List.hpp
src/Activities/FightActivity/: FightActivity.cpp  FightActivity.hpp  FightActivityUI.cpp  FightActivityUI.hpp  FightActivityUIObjects.cpp  FightActivityUIObjects.hpp  FightData.cpp  FightData.hpp  FightEnv.cpp  FightEnv.hpp  FightStateEnum.hpp  UIEnemyOverview.cpp  UIEnemyOverview.hpp  UIPlayerOverview.cpp  UIPlayerOverview.hpp
src/Activities/FightActivity/FightStates/: EnemiesTurn.cpp  EnemiesTurn.hpp  FightEndState.cpp  FightEndState.hpp  FightState.cpp  FightState.hpp  PlayersTurn.cpp  PlayersTurn.hpp  TurnChangeState.cpp  TurnChangeState.hpp
src/Activities/MenuActivity/: MenuActivity.cpp  MenuActivity.hpp
src/Actors/: Actor.cpp  Actor.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp
src/Animations/: Animation.hpp  Fading.cpp  Fading.hpp  IncomingBanner.cpp  IncomingBanner.hpp  TextFadingManager.cpp  TextFadingManager.hpp
src/Global/: Defines.hpp  GenerateColorIMG.cpp  GenerateColorIMG.hpp  Save.cpp  Save.hpp  Utility.cpp  Utility.hpp
src/Items/: Item.cpp  Item.hpp
src/Lib/nlohmann_json/: json.hpp
src/ObserverPattern/: Observer.cpp  Observer.hpp
src/System/: Game.cpp  Game.hpp  GameEvents.cpp  GameState.cpp  GameState.hpp  GameStatus.hpp  GameUI.cpp  GameUI.hpp  RenderEngine.cpp  RenderEngine.hpp
src/UIElements/: UIBorderedImage.cpp  UIBorderedImage.hpp  UIBox.cpp  UIBox.hpp  UIButton.cpp  UIButton.hpp  UIColorPicker.cpp  UIColorPicker.hpp  UIElement.hpp  UIStats.cpp  UIStats.hpp
src/draw/: CMakeLists.txt  draw.cpp  draw.hpp
src/include/: ActivityEnum.hpp  Color.hpp  Defines.hpp  FightEnv.hpp  Game.hpp  GameEvents.hpp  GameState.hpp  GameStatus.hpp  GenerateColorIMG.hpp  UIEnemyOverview.hpp  UIPlayerOverview.hpp
src/include/Activities/: Activity.hpp  CharacterActivity.hpp  CharacterManagementActivity.hpp  FightActivity.hpp  MenuActivity.hpp
src/include/Actors/: Actor.hpp  Enemy.hpp  Player.hpp
src/include/Animations/: Animation.hpp  IncomingBanner.hpp  TextFaddingManager.hpp  TextFadingManager.hpp
src/include/FightStates/: EnemiesTurn.hpp  FightState.hpp  PlayersTurn.hpp  StateFight.hpp  StateTurnChange.hpp  TurnChangeState.hpp
src/include/ObserverPattern/: Observer.hpp  Subject.hpp
src/include/UIComponents/: UIComponent.hpp  UIPlayerStats.hpp  UIStats.hpp
src/include/UIElements/: UIBorderedImage.hpp  UIBox.hpp  UIButton.hpp  UIColorBox.hpp  UIColorPicker.hpp  UIContainer.hpp  UIElement.hpp  UIStats.hpp
src/include/UIObjects/: UIEnemyOverview.hpp  UIPlayerOverview.hpp
src/include/UI_Objects/: UIEnemyOverview.hpp  UIPlayerOverview.hpp
src/main/: FightEnv.cpp  Game.cpp  GameEvents.cpp  GameState.cpp  GameStatus.cpp  GenerateColorIMG.cpp  UIEnemyOverview.cpp  UIPlayerOverview.cpp  main.cpp
src/main/Activities/: Activity.cpp  CharacterActivity.cpp  CharacterManagementActivity.cpp  FightActivity.cpp  MenuActivity.cpp
src/main/Actors/: Actor.cpp  Enemy.cpp  Player.cpp
src/main/Animations/: IncomingBanner.cpp  TextFaddingManager.cpp  TextFadingManager.cpp
src/main/FightStates/: EnemiesTurn.cpp  FightState.cpp  PlayersTurn.cpp  StateTurnChange.cpp  TurnChangeState.cpp
src/main/ObserverPattern/: Observer.cpp  Subject.cpp
src/main/UIComponents/: UIComponent.cpp  UIPlayerStats.cpp  UIStats.cpp
src/main/UIElements/: UIBorderedImage.cpp  UIBox.cpp  UIButton.cpp  UIColorBox.cpp  UIColorPicker.cpp  UIElement.cpp  UIStats.cpp
src/main/UIObjects/: UIEnemyOverview.cpp  UIPlayerOverview.cpp
src/main/UI_Objects/: UIEnemyOverview.cpp  UIPlayerOverview.cpp
